--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 	      <div class="carousel-caption d-none d-md-block text-right mb-5">
 	        <h1 class="display-3">Heading One</h1>
 	        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent eget volutpat est, ut dictum dui. Pellentesque sit amet arcu elit. Fusce gravida molestie metus, nec rhoncus tellus cursus vitae. Pellentesque vehicula elit vel dignissim volutpat. Sed vel felis sed tellus volutpat accumsan at sit amet mauris.</p>
-	        <a href="#" class="btn btn-danger btn-lg">Sign Up Now</a>
+	        <a href="#" class="btn btn-danger btn-lg">Learn More</a>
 	      </div>
 	    </div>
     </div>
